--- a/package.json
+++ b/package.json
@@ -17,9 +17,18 @@
   },
   "homepage": "https://github.com/Sireus/Food-Hub-Template#readme",
   "devDependencies": {
+    "autoprefixer": "^10.3.7",
     "browser-sync": "^2.27.5",
+    "cssnext": "^1.8.5",
     "gulp": "^4.0.2",
+    "gulp-postcss": "^9.0.1",
     "gulp-sass": "^5.0.0",
+    "node-normalize-scss": "^8.1.2",
+    "postcss": "^8.3.11",
+    "precss": "^4.0.0",
     "sass": "^1.43.3"
+  },
+  "dependencies": {
+    "postcss-import": "^14.0.2"
   }
 }
